Render single renderlayer gives different result than rendering all renderlayers #37303

Closed
opened 2013-11-04 03:28:42 +01:00 by gandalf3 · 7 comments
Member

%%%--- Operating System ---

Archlinux (x86_64)

- Blender version with error, and version that worked ---

Blender 2.69 release

- Short description of error ---

Rendering a single renderlayer via the button on the renderlayer node in the compositor does not give reflections of objects in excluded layers (correct)

Render all layers results in the layer having reflections of objects only visible in excluded layers (incorrect)

- Steps for others to reproduce the error (based on attached .blend file) ---
  1. Open attached .blend

  2. Press the render button on the "reflections&refractions" node in the compositor

  3. The layer renders without any reflections of the object "Cube", selected in the 3D view. (correct behavior)

  4. Press F12. When it renders the "Reflections&Refractions" layer, there are reflections of the "Cube" object. (incorrect behavior)
    %%%

%%%--- Operating System --- Archlinux (x86_64) - Blender version with error, and version that worked --- Blender 2.69 release - Short description of error --- Rendering a single renderlayer via the button on the renderlayer node in the compositor does not give reflections of objects in excluded layers (correct) Render all layers results in the layer having reflections of objects only visible in excluded layers (incorrect) - Steps for others to reproduce the error (based on attached .blend file) --- 1. Open attached .blend 2. Press the render button on the "reflections&refractions" node in the compositor 3. The layer renders without any reflections of the object "Cube", selected in the 3D view. (correct behavior) 4. Press F12. When it renders the "Reflections&Refractions" layer, there are reflections of the "Cube" object. (incorrect behavior) %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%At a glance looks like the excluded render layers are actually included in Cycles (blender_sync.cpp). Quick test seems to fix it, but will leave it to Brecht:

current

render_layer.scene_layer |= render_layer.exclude_layer & render_layer.holdout_layer;

possible fix

render_layer.scene_layer |= render_layer.holdout_layer;
render_layer.scene_layer &= ~render_layer.exclude_layer;
%%%

%%%At a glance looks like the excluded render layers are actually *in*cluded in Cycles (blender_sync.cpp). Quick test seems to fix it, but will leave it to Brecht: ## current render_layer.scene_layer |= render_layer.exclude_layer & render_layer.holdout_layer; ## possible fix render_layer.scene_layer |= render_layer.holdout_layer; render_layer.scene_layer &= ~render_layer.exclude_layer; %%%

This issue was referenced by blender/blender-addons-contrib@b98ff5cb5b

This issue was referenced by blender/blender-addons-contrib@b98ff5cb5b2c14c33b16e3b129e1e08810e90a6c

This issue was referenced by b98ff5cb5b

This issue was referenced by b98ff5cb5b2c14c33b16e3b129e1e08810e90a6c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b98ff5cb5b.

Closed by commit b98ff5cb5b.

Fixed now, thanks for the report.

Fixed now, thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37303
No description provided.