Fix T37303, Fix T37163: cycles mask layers that are also excluded not rendering correct with multiple render layers.

This case is somewhat weak, we now do a few more checks on sync than I would
like, but it's not too bad.